@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2018/07/28 14:40:44 brook Exp $
+# $NetBSD: Makefile,v 1.4 2019/07/31 15:57:09 brook Exp $
 
-CATEGORIES=	geography
+CATEGORIES=	geography R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/countrycode/
@@ -8,7 +8,9 @@ COMMENT=	Convert country names and country codes
 LICENSE=	gnu-gpl-v3
 
 R_PKGNAME=	countrycode
-R_PKGVER=	0.18
+R_PKGVER=	1.1.0
+
+USE_LANGUAGES=	# none
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
