@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.3 2015/11/03 00:08:41 agc Exp $
+$NetBSD: distinfo,v 1.4 2019/07/31 15:57:09 brook Exp $
 
-SHA1 (R/countrycode_0.18.tar.gz) = a2a00f1dea17cf2104d1c6b49f6fa5d16e807169
-RMD160 (R/countrycode_0.18.tar.gz) = ce148a4a15fbced3710855f1b21c4a7662d1cd97
-SHA512 (R/countrycode_0.18.tar.gz) = 66c1053ec53d2e6d3ef4ace8fb64ccd33f81634e53a981ed606a0ecb7079db8ea49519c2f752048af906d174562ef7ba9ace514a86690310cce432d0aab58891
-Size (R/countrycode_0.18.tar.gz) = 17552 bytes
+SHA1 (R/countrycode_1.1.0.tar.gz) = 7d9990f7c63a9fb5715d9c2c998290aae89eef74
+RMD160 (R/countrycode_1.1.0.tar.gz) = e4d143efb2433331cdf4d34ebd1fbafd8d3202fe
+SHA512 (R/countrycode_1.1.0.tar.gz) = e8b165725d183f397d27b41c1489358f17a3a48748ad95308b89dcd285908412b7221ffcd4dc61d272fe0226d6a775270e30c1b7e53b5e63ac919372241e8880
+Size (R/countrycode_1.1.0.tar.gz) = 293105 bytes
